<resources>
    <string name="app_name">TG18</string>
    <string name="btn_topPosition">Top</string>
    <string name="btn_up">Up</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_down">Down</string>
    <string name="btn_bottomPosition">Bottom</string>

    <string name="btn_dimUp"></string>
    <string name="btnC_red">R</string>
    <string name="btnC_lightRed"></string>
    <string name="btnC_orange"></string>
    <string name="btnC_lightOrange"></string>
    <string name="btnC_yellow"></string>
    <string name="btn_dimDown"></string>
    <string name="btnC_green">G</string>
    <string name="btnC_lightGreen"></string>
    <string name="btnC_cyan"></string>
    <string name="btnC_lightTurquoise"></string>
    <string name="btnC_turquoise"></string>
    <string name="btn_off">OFF</string>
    <string name="btnC_blue">B</string>
    <string name="btnC_lightBlue"></string>
    <string name="btnC_violet"></string>
    <string name="btnC_purple"></string>
    <string name="btnC_pink"></string>
    <string name="btn_on">ON</string>
    <string name="btnC_white">W</string>
    <string name="btn_flash">FLASH</string>
    <string name="btn_strobe">STROBE</string>
    <string name="btn_fade">FADE</string>
    <string name="btn_smooth">SMOOTH</string>

    <string name="btn_pcOnOff">On/Off</string>
    <string name="btn_pcRestart">Restart</string>

    <string name="btn_settings">Settings</string>

    <string name="swc_autoBt">Automatically connect to controller</string>
    <string name="swc_autoBt_summary">Automatically turn on Bluetooth and connect to the controller on app startup</string>
    <string name="swc_enableBt">Turn on Bluetooth</string>
    <string name="swc_enableBt_summary">Turn on Bluetooth and automatically connect to the controller</string>

    <string name="title_lightControl">Light control</string>
    <string name="title_heightControl">Height control</string>
    <string name="title_pcControl">PC control</string>
    <string name="title_btSettings">Bluetooth settings</string>
    <string name="title_btNotConnected">Not connected</string>
    <string name="title_btConnecting">Connecting&#8230;</string>
    <string name="title_btConnected">Connected</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
